logs/Slang/chapter-6/6.20.2--parameter_aggregate.sv.log
name: parameter_aggregate
description: parameter aggregate type tests
should_fail: 0
tags: 6.20.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.20.2--parameter_aggregate.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.20.2--parameter_aggregate.sv:8:35: error: language feature not yet supported
	parameter logic [31:0] p [3:0] = '{1, 2, 3, 4};
	                                 ^~~~~~~~~~~~~
